[b][color=orange]v3.35[/color], 29.08.2018[/b][list]
[*]Skin extra CharacterStatsPane from S&L Armory Mode.
[*]Updated LocPanel & MicroBar combat hide options.
[*]Show/hide the bags if the ScrappingMachine Frame is shown. Thx Whiro
[*]Fix a possible error if the panels table doesn't exist. Thx Whiro
[*]Added BfA Augementation Rune to the RaidBuffs.
[*]A lot of skin updates.[/list]

[b][color=orange]v3.34[/color], 22.08.2018[/b][list]
[*]Fixed an issue that the Changelog wasn't showing on version bumb.
[*]Added the option back to hide the Coords on the LocPanel.
[*]Ajust some DataTexts in my install.
[*]Add some frames to the E.FrameLocks. This will hide correctly some frames in Pet Battles.
[*]Some skin adjustments.[/list]

[b][color=orange]v3.33[/color], 20.08.2018[/b][list]
[*]Update EFL.
[*]Reskinned the ScrappingMachine.
[*]Reskinned GarrisonUI.
[*]Updated Azerite Skin.
[*]Change the FrameStrata for the ObjectiveTracker.
[*]Added an option to enable/disable the skin for the BossButton.
[*]Added custom emojis :salt: :monkaomega:[/list]

[b][color=orange]v3.32[/color], 13.08.2018[/b][list]
[*]Added a scale option for the MicroBar.
[*]Added a show/hide option for the friends/guild text on the MicroBar.
[*]Add back the default QuickJoinToastButton and skinned it.
[*]Removed the QuickJoinNotifications. We use the blizz default now.
[*]Fixed an issue in the DBM skin which not allow to resize the bars.
[*]Added a text overlay to the Minimap which will show who pinged.
[*]Added back CooldownFlash!!
[*]Added a text option for the MicroBar.
[*]A lot of skin updates.[/list]

[b][color=orange]v3.31[/color], 30.07.2018[/b][list]
[*]Fix the WorldMap Title Frame.
[*]Updated the Talent skin.
[*]Added back my time datatext.
[*]Fix the LFGListInviteDialog Role Icons.[/list]

[b][color=orange]v3.30[/color], 29.07.2018[/b][list]
[*]Added a panel to the chat to place the Voice Buttons.
[*]-> You have to do the setup for Chat & ActionBars again.